# rag_chatbot_service

./: .gitignore  README.md
chromadb/: chroma.sqlite3
rag/: docker-compose.yaml  test.ipynb
rag/backend/: Dockerfile  main.py  pyproject.toml  router.py  test.ipynb
rag/database/: Dockerfile  _chroma_db_old.py  _main_old.py  _models_old.py  chroma_db.py  chroma_db__.py  database.py  datatypes.py  delete_chroma.py  main.py  models.py  pyproject.toml  requirements.txt  router.py
rag/frontend/: Dockerfile  pyproject.toml  streamlit.py
rag/frontend/pages/: add_files.py
rag/model/: Dockerfile  config.yaml  main.py  models.py  pyproject.toml  router.py
