[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Andrew <suhowandrew@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.4"
langchain-community = "^0.3.3"
langchain-chroma = "^0.1.4"
sentence-transformers = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
