[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Andrew <suhowandrew@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.4"
langchain-community = "^0.3.3"
fastapi = "^0.115.3"
transformers = "^4.46.0"
torch = "^2.5.0"
uvicorn = "^0.32.0"
websockets = "^13.1"
python-multipart = "^0.0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
