[tool.poetry]
name = "database"
version = "0.1.0"
description = ""
authors = ["Andrew <suhowandrew@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.2"
numpy = "^2.1.2"
chromadb = "^0.5.15"
sentence-transformers = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
