[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Andrew <suhowandrew@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.39.0"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
